# cpac-log-muncher

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yaml
src/clmunch/: clmunch.py
tests/: test_dummy.py
