[project]
name = "clmunch"
version = "0.1.0"
description = "Accumulate and summarize run (error) data across many CPAC executions."
authors = [
  {name = "CMI DAIR", email = "dair@childmind.org"}
]
license = "LGPL-2.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1.4",
  "tabulate>=0.9.0",
  "humanize>=4.9.0"
]

[project.scripts]
styx = "clmunch.clmunch:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.8.1",
  "deptry>=0.23.0"
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
